<resources>
    <string name="app_name">BdWaiMai</string>
    <string name="home">首页</string>
    <string name="rank">吃啥</string>
    <string name="order">订单</string>
    <string name="me">我的</string>
    <string name="orderlogin_tip">您还没有登录，请登录后查看订单</string>
    <string name="login">登录/注册</string>

    <string name="me_receive_address">我的送餐地址</string>
    <string name="me_daijinquan">我的代金券</string>
    <string name="me_tuikuan">我的退款</string>
    <string name="me_message">我的消息</string>
    <string name="me_shoucang">我的收藏</string>
    <string name="me_pinglun">我的评论</string>
    <string name="me_baiduwallet">百度钱包</string>
    <string name="me_baidunuomi">百度糯米</string>
    <string name="me_problem">常见问题</string>
    <string name="me_phone">客服 400-0110-7777</string>

    <string name="home_eat">餐饮</string>
    <string name="home_buy">超市购</string>
    <string name="home_fruit">水果</string>
    <string name="home_tea">下午茶</string>
    <string name="home_tuhao">土豪特供</string>
    <string name="home_newdian">新店</string>
    <string name="home_deliver">百度配送</string>
    <string name="home_medicine">网上送药</string>

    <string name="all_shop">全部商家</string>

    <string name="search_hint">搜索商户或者商品名称</string>


</resources>
