<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/bottom_text_selected">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/search_shape"
            android:layout_margin="10dp"
            android:textSize="22sp"
            android:hint="@string/search_hint"
            android:drawableStart="@drawable/non_catering_icon_search"
            android:drawableLeft="@drawable/non_catering_icon_search"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TableRow>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/eat"
                        android:text="@string/home_eat"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/buy"
                        android:text="@string/home_buy"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/fruit"
                        android:text="@string/home_fruit"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/tea"
                        android:text="@string/home_tea"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/tuhao"
                        android:text="@string/home_tuhao"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/newdian"
                        android:text="@string/home_newdian"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/deliver"
                        android:text="@string/home_deliver"/>
                    <TextView
                        style="@style/home_tv"
                        android:drawableTop="@drawable/medicine"
                        android:text="@string/home_medicine"/>
                </TableRow>
            </TableLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/all_shop"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_home_shop">
            </ListView>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
