<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/order"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="@color/bottom_text_selected"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btn_order_login"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:textColor="#ffffff"
        android:background="@drawable/order_login"
        android:text="@string/login"/>
    <TextView
        style="@style/order_view"
        android:id="@+id/tv_order_tip"
        android:layout_above="@id/btn_order_login"
        android:text="@string/orderlogin_tip"
       />
    <ImageView
        android:layout_above="@id/tv_order_tip"
        style="@style/order_view"
        android:background="@drawable/order_me"/>


</RelativeLayout>
