<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/bottom_text_selected">
            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:id="@+id/btn_me_set"
                android:background="@drawable/mypage_navigationbar_icon_setting"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:id="@+id/btn_me_login"
                android:background="@drawable/mypage_login"
                android:layout_centerInParent="true"
                android:textColor="@color/bottom_text_selected"
                android:text="@string/login"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            style="@style/me_relativelayout">
            <ImageView
               style="@style/me_icon"
                android:id="@+id/iv_me_address"
                android:background="@drawable/receive_address_loc_icon"/>
            <TextView
               style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_address"
                android:text="@string/me_receive_address"/>

            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>

        </RelativeLayout>
        <RelativeLayout
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_daijinquan"
                android:background="@drawable/tab_icon_dingdan"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_daijinquan"
                android:text="@string/me_daijinquan"/>

            <ImageView
                style="@style/me_indicator"
                />
            <View
                style="@style/view_line">
            </View>
        </RelativeLayout>
        <RelativeLayout
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_tuikuan"
                android:background="@drawable/mypage_list_icon_refund"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_tuikuan"
                android:text="@string/me_tuikuan"/>

            <ImageView
                style="@style/me_indicator"
                />
            <View
                style="@style/view_line">
            </View>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_message"
                android:background="@drawable/my_messages"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_message"
                android:text="@string/me_message"/>
            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_shoucang"
                android:background="@drawable/mypage_list_icon_star"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_shoucang"
                android:text="@string/me_shoucang"/>
            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_pinglun"
                android:background="@drawable/mypage_list_icon_comment"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_pinglun"
                android:text="@string/me_message"/>
            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_wallet"
                android:background="@drawable/mypage_list_icon_wallet"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_wallet"
                android:text="@string/me_baiduwallet"/>
            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_baidunuomi"
                android:background="@drawable/icon_nuomi"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_baidunuomi"
                android:text="@string/me_baidunuomi"/>
            <View
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            style="@style/me_relativelayout">
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_problem"
                android:background="@drawable/icon_common_problem"/>
            <TextView
                style="@style/me_text"
                android:layout_toRightOf="@+id/iv_me_problem"
                android:text="@string/me_problem"/>
            <ImageView
                style="@style/me_indicator"
                />
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            style="@style/me_relativelayout">
            <TextView
                style="@style/me_text"
                android:layout_centerInParent="true"
                android:id="@+id/tv_me_call"
                android:textColor="#f792c0"
                android:text="@string/me_phone"/>
            <ImageView
                style="@style/me_icon"
                android:id="@+id/iv_me_phone"
                android:layout_toLeftOf="@id/tv_me_call"
                android:background="@drawable/mypage_list_icon_call"/>
            <ImageView
                style="@style/view_line"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
